<resources>
    <string name="app_name">Teacher App</string>
    <string name="action_settings">Settings</string>
    <string name="lesson_plan">Lesson Plan For Teachers</string>
    <string name="activity_type_one">Formal In Class Teaching</string>
    <string name="activity_type_two">Informal Out of Class Usage</string>
    <string name="start">Start</string>
    <string name="subject">SELECT SUBJECT</string>
    <string name="stdclass">SELECT CLASS</string>
    <string name="term">SELECT TERM</string>
    <string name="week">SELECT WEEK</string>
    <string name="day">SELECT DAY</string>
    <string name="activity_type">SELECT TYPE OF ACTIVITY</string>
    <string name="start_lesson">START NEW LESSON</string>
    <string name="lesson_intro">Select the various options and start the lesson</string>
    <string name="go_to">GO TO</string>
    <string name="view">VIEW</string>
    <string name="summary">SUMMARY</string>
    <string name="close">CLOSE</string>
    <string name="previous"><![CDATA[<< Previous]]></string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="select_subject">SELECT SUBJECT</string>
    <string name="select_class">SELECT CLASS</string>
    <string name="select_term">SELECT TERM</string>
    <string name="select_week">SELECT WEEK</string>
    <string name="select_day">SELECT DAY</string>
    <string name="select_activity_type">SELECT TYPE OF ACTIVITY</string>
    <string name="go_to_lesson_mat">GO TO LESSON MATERIAL</string>
    <string name="half_term_title">HALF TERM SUMMARY</string>
    <string name="finish">Finish</string>
    <string name="timeup">Time up</string>
    <string name="text">text</string>
    <string name="expected_time">Expected Time</string>
    <string name="week_summary">WEEK SUMMARY</string>
    <string name="pause">Pause</string>
    <string name="minutes">Mins</string>
    <string name="no_data_found">No data found</string>
    <string name="upload_excel">Upload Excel File</string>
    <string name="upload">Upload Material</string>
    <string name="uploading">Uploading file...wait</string>
    <string name="message">File upload in progress...please wait.</string>
    <string name="audio_title">Audio Player</string>
    <string name="video_player">Video Player</string>
    <string name="back_not_allowed">You cannot go back beyond two times</string>
</resources>
