<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.practicer.teacherapp.WeekContentActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"/>
    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">
        <TextView
            android:id="@+id/week_summary_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="17sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="@color/grey"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/half_term_summary_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_spinner"
                android:layout_margin="1dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:typeface="normal"
                android:text="@string/half_term_title"
                android:textSize="18sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/week_summary_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_spinner"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:typeface="normal"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/week_summary"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/grey"
                android:layout_marginBottom="45dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/grey"
                   >
                    <TextView
                        android:id="@+id/body_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/title_gray"
                        android:typeface="normal"
                        android:gravity="start|center"
                        android:paddingLeft="60dp"
                        android:paddingRight="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_gravity="start|center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textSize="21sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:id="@+id/timerValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:textStyle="bold"
                            android:paddingRight="10dp"
                            android:textAllCaps="true"
                            android:text=""
                            android:layout_weight="1"
                            android:textSize="21sp"
                            android:textColor="@color/ColorPrimaryDark"
                            android:layout_alignRight="@+id/linearLayout"
                            android:layout_alignEnd="@+id/linearLayout"
                            android:layout_gravity="start|center" />

                        <TextView
                            android:id="@+id/timerCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end|center"
                            android:paddingRight="10dp"
                            android:textStyle="bold"
                            android:text=""
                            android:textAllCaps="true"
                            android:layout_weight="1"
                            android:textSize="21sp"
                            android:textColor="@color/ColorPrimaryDark"
                            android:layout_alignRight="@+id/linearLayout"
                            android:layout_alignEnd="@+id/linearLayout"
                            android:layout_gravity="end|center" />

                    </LinearLayout>

                </LinearLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                   >
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/body_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="21sp"
                        android:textColor="@color/title_gray"
                        android:paddingLeft="60dp"
                        android:paddingRight="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"/>

                    <ImageView
                        android:id="@+id/body_content_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:visibility="gone"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"/>

                    <FrameLayout
                        android:id="@+id/musicFrame"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:background="@drawable/background_black">
                        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/seekbar_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/songCurrentDurationLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/white"
                                android:paddingLeft="10dp"
                                android:text="12.00"
                                android:textSize="10sp"
                                android:layout_toLeftOf="@+id/songProgressBar"
                                android:layout_toStartOf="@+id/songProgressBar"
                                android:layout_alignBottom="@+id/songTotalDurationLabel" />

                            <SeekBar
                                android:id="@+id/songProgressBar"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@+id/btnPlay"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="top|center"
                                android:progressDrawable="@drawable/seekbar_progress"
                                android:thumb="@drawable/seek_handler" />

                            <TextView
                                android:id="@+id/songTotalDurationLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:layout_weight="1"
                                android:paddingRight="10dp"
                                android:textColor="#04cbde"
                                android:text="12.00"
                                android:textSize="10sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/btnPlay"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_horizontal"
                            android:background="@android:drawable/ic_media_play" />
                        </LinearLayout>
                    </FrameLayout>

                </LinearLayout>
                </ScrollView>
                <ListView
                    android:id="@+id/multimedia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:dividerHeight="10dp"
                    android:visibility="gone"
                    android:divider="@color/grey"
                    android:layout_marginBottom="50dp">
                </ListView>
            </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <Button
        android:id="@+id/previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textColor="@color/white"
        android:background="@drawable/background_colorprimary"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_weight="1"
        android:layout_margin="1dp" />


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/background_colorprimary"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_margin="1dp"
        android:layout_weight="1"/>

</LinearLayout>
</RelativeLayout>