<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.practicer.teacherapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/grey"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:layout_margin="5dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_plan"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_intro"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/title_gray"
                android:padding="5dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">

    <Spinner
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:spinnerMode="dialog"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    </Spinner>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <Spinner
        android:id="@+id/clas"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:spinnerMode="dialog"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    </Spinner>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <Spinner
        android:id="@+id/term"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:spinnerMode="dialog"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    </Spinner>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <Spinner
        android:id="@+id/week"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:spinnerMode="dialog"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    </Spinner>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <Spinner
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:spinnerMode="dialog"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    </Spinner>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <LinearLayout
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/lighter_blue"
        >
        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="Time"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:hint="Time"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@color/white"
            android:textColorHint="@color/title_gray"
            android:textColor="@color/title_gray"/>
        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="Date"
            android:textSize="25sp"
            android:padding="10dp"
            android:textAllCaps="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:gravity="center"
            android:textColorHint="@color/title_gray"
            android:background="@color/white"
            android:hint="Date"
            android:textColor="@color/title_gray"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <Spinner
        android:id="@+id/type_of_activity"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:spinnerMode="dialog"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    </Spinner>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        card_view:cardCornerRadius="3dp"
        android:background="@color/white">
    <Button
        android:id="@+id/start_activity_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/start_lesson"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>
</android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
</RelativeLayout>